--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "npx tailwindcss -i ./src/tailwind.css -o ./public/style.css --watch"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
