--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "watch": "npx tailwindcss -i ./src/tailwind.css -o ./public/style.css --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
